--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav class="navbar background h-nav-resp ">
             <ul class="nav-list another v-class-resp ">
                 <div class="logo">
-                    <img src="/image/logo.jpg" alt="logo">
+                    <img src="image/logo.jpg" alt="logo">
                 </div>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">about</a></li>
@@ -60,7 +60,7 @@
             </p>
             </div>
                 <div class="thambnail">
-                    <img src="/image/education-2.png" alt="education image">
+                    <img src="image/education-2.png" alt="education image">
                 </div>
         </section>
         <section class="sec-left">
@@ -74,7 +74,7 @@
             </p>
             </div>
                 <div class="thambnail">
-                    <img src="/image/about-1.jpg" alt="education image">
+                    <img src="image/about-1.jpg" alt="education image">
                 </div>
         </section>
         <hr>
@@ -90,7 +90,7 @@
             </p>
             </div>
                 <div class="thambnail">
-                    <img src="/image/about2.jpg" alt="education image">
+                    <img src="image/about2.jpg" alt="education image">
                 </div>
         </section>
         <section class="contact" id="contact">
